docs/pages/versions/v57.0.0/sdk/ui/swift-ui/progressview.mdx
---
title: ProgressView
description: A SwiftUI ProgressView component for displaying progress indicators.
sourceCodeUrl: 'https://github.com/expo/expo/tree/sdk-57/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['ios', 'tvos', 'expo-go']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';
import { ComponentExample } from '~/ui/components/ComponentExample';
import { ContentSpotlight } from '~/ui/components/ContentSpotlight';

Expo UI ProgressView matches the official SwiftUI [ProgressView API](https://developer.apple.com/documentation/swiftui/progressview) and supports styling via the [`progressViewStyle`](modifiers/#progressviewstylestyle) modifier.

<ContentSpotlight
  variant="component"
  aspect="landscape"
  src="/static/images/expo-ui/progressview/ios-light.webp"
  darkSrc="/static/images/expo-ui/progressview/ios-dark.webp"
  alt="Indeterminate spinner and a determinate ProgressView with a label"
/>

## Installation

<APIInstallSection />

## Usage

> **Note:** When using the `linear` style (which is the default for determinate progress), `ProgressView` is a flexible-width component, it expands to fill available horizontal space. When using `matchContents` on the `Host`, you should apply a [`frame`](modifiers/#frameparams) modifier on the `ProgressView` to give it an explicit width. Alternatively, give the `Host` an explicit size using `style` (for example, `style={{ width: 300 }}` or `style={{ flex: 1 }}`). The `circular` style and indeterminate spinner have a fixed size and work with `matchContents`.

### Indeterminate progress

When no `value` is provided, the progress view displays an indeterminate indicator (spinner).

<ComponentExample
  title="IndeterminateExample.tsx"
  src="/static/images/expo-ui/examples/progressview-indeterminate-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/progressview-indeterminate-ios-dark.webp"
  alt="An indeterminate spinner sized to its content at the leading edge">

```tsx
import { Host, ProgressView } from '@expo/ui/swift-ui';

export default function IndeterminateExample() {
  return (
    <Host matchContents>
      <ProgressView />
    </Host>
  );
}
```

</ComponentExample>

### Determinate progress

Provide a `value` between `0` and `1` to show determinate progress.

<ComponentExample
  title="DeterminateExample.tsx"
  src="/static/images/expo-ui/examples/progressview-determinate-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/progressview-determinate-ios-dark.webp"
  alt="A linear progress bar filled to the halfway point">

```tsx
import { Host, ProgressView } from '@expo/ui/swift-ui';

export default function DeterminateExample() {
  return (
    <Host style={{ flex: 1 }}>
      <ProgressView value={0.5} />
    </Host>
  );
}
```

</ComponentExample>

### Progress view styles

Use the [`progressViewStyle`](modifiers/#progressviewstylestyle) modifier to change the progress view's appearance. Available styles are: `automatic`, `linear`, and `circular`.

<ComponentExample
  title="ProgressViewStylesExample.tsx"
  src="/static/images/expo-ui/examples/progressview-styles-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/progressview-styles-ios-dark.webp"
  alt="A half-filled linear progress bar labelled Linear, above a circular spinner labelled Circular">

```tsx
import {
  Host,
  ProgressView,
  Text,
  VStack,
} from '@expo/ui/swift-ui';
import { progressViewStyle } from '@expo/ui/swift-ui/modifiers';

export default function ProgressViewStylesExample() {
  return (
    <Host style={{ flex: 1 }}>
      <VStack spacing={16}>
        <Text>Linear</Text>
        <ProgressView
          value={0.5}
          modifiers={[progressViewStyle('linear')]}
        />
        <Text>Circular</Text>
        <ProgressView
          value={0.5}
          modifiers={[progressViewStyle('circular')]}
        />
      </VStack>
    </Host>
  );
}
```

</ComponentExample>

### With label

You can pass custom components as `children` to provide a label for the progress view.

<ComponentExample
  title="LabelExample.tsx"
  src="/static/images/expo-ui/examples/progressview-label-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/progressview-label-ios-dark.webp"
  alt="A progress bar filled to one quarter, with the label Loading above it">

```tsx
import { Host, ProgressView, Text } from '@expo/ui/swift-ui';

export default function LabelExample() {
  return (
    <Host style={{ flex: 1 }}>
      <ProgressView value={0.25}>
        <Text>Loading...</Text>
      </ProgressView>
    </Host>
  );
}
```

</ComponentExample>

### Tinted progress view

Use the `tint` modifier to change the progress view's color.

<ComponentExample
  title="TintedExample.tsx"
  src="/static/images/expo-ui/examples/progressview-tinted-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/progressview-tinted-ios-dark.webp"
  alt="A red progress bar filled to roughly seventy percent">

```tsx
import { Host, ProgressView } from '@expo/ui/swift-ui';
import { tint } from '@expo/ui/swift-ui/modifiers';

export default function TintedExample() {
  return (
    <Host style={{ flex: 1 }}>
      <ProgressView value={0.7} modifiers={[tint('red')]} />
    </Host>
  );
}
```

</ComponentExample>

### Timer-based progress

Use the `timerInterval` prop to create a progress view that automatically animates over a time range. This is useful for showing countdown timers or timed operations.

> **Note:** Timer-based progress is only available on iOS 16+ and tvOS 16+.

<ComponentExample
  title="TimerExample.tsx"
  src="/static/images/expo-ui/examples/progressview-timer-ios-light.webp"
  darkSrc="/static/images/expo-ui/examples/progressview-timer-ios-dark.webp"
  alt="Two timer progress bars part way through a ten second range, one labeled Counting up">

```tsx
import {
  Host,
  ProgressView,
  Text,
  VStack,
} from '@expo/ui/swift-ui';

export default function TimerExample() {
  const startDate = new Date();
  const endDate = new Date(Date.now() + 10000); // 10 seconds from now

  return (
    <Host style={{ flex: 1 }}>
      <VStack spacing={16}>
        <ProgressView
          timerInterval={{ lower: startDate, upper: endDate }}
        />
        <ProgressView
          timerInterval={{ lower: startDate, upper: endDate }}
          countsDown={false}>
          <Text>Counting up</Text>
        </ProgressView>
      </VStack>
    </Host>
  );
}
```

</ComponentExample>

## API

```tsx
import { ProgressView } from '@expo/ui/swift-ui';
```

<APISection
  packageName="expo-ui/swift-ui/progressview"
  apiName="ProgressView"
/>
